Fixing overflow of cover images

--- a/css/style.css
+++ b/css/style.css
@@ -200,7 +200,7 @@ p {
 }
 
 #cover-wrapper {
-    max-height: 600px;
+    height: 1000px;
     overflow: hidden;
 }
 
@@ -210,7 +210,6 @@ p {
 }
 
 #cover {
-    font-family: 'ashburylight';
     width: 100%;
     color: white;
     transition: background 1s linear;
